<resources>
    <string name="app_name">AR-Reshare</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="product_image">Product Image</string>
    <string name="contributor">Contributor</string>
    <string name="bookmark_button">Bookmark Button</string>
    <string name="message_button">Message Button</string>
    <string name="API_KEY1">AIzaSyCpMkCR3OcbAK9aZ4mpthgRDtHU4l8tGIk</string>
    <string name="API_KEY2">AIzaSyBsn8QLFwcsXnxHf2ESE3HrXbch6lux3Ak</string>
    <string name="STATIC_MAP_KEY">AIzaSyAFWHH-yjENxp6a7kQUeFfLjWcbGBuuM6Y</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="thanks_message">You added this product,\nthank you for sharing!</string>
    <string name="app_description">An augmented-reality enabled application allowing people to share the goods and gifts they no longer need or want.</string>

    <!-- Used for SignUp Fragment -->
    <string name="signupProfileCameraText">Take a Selfie!</string>
    <string name="signupProfileGalleryText">Choose From Gallery!</string>
    <string name="signupProfileCancelText">No Thanks, Skip For Now</string>

    <!-- used for addProduct page dropdown   -->
    <string-array name="categories">
        <item>Other</item>
        <item>Clothing</item>
        <item>Accessories</item>
        <item>Electronics</item>
        <item>Books</item>
        <item>Household</item>
    </string-array>
    <string-array name="condition">
        <item>New</item>
        <item>Good</item>
        <item>Average</item>
        <item>Poor</item>
    </string-array>
    <array name="add_image_popup">
        <item>Camera</item>
        <item>Gallery</item>
    </array>
    <string name="location">Location</string>
    <string name="calc_distance">Calculating distance</string>
    <string name="category">Category</string>
    <string name="location_pin">Location Pin</string>
    <string name="add_product">Add Product</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>