<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1Top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="80dp"
            android:layout_height="95dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/profile_icon"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/product_title"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/profileIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/product_description"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/profileIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="italic"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toBottomOf="@+id/c1Top"
        android:contentDescription="@string/product_image" />

</androidx.constraintlayout.widget.ConstraintLayout>