<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a Profile Picture?"
            android:layout_gravity="top"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Having a profile picture makes your profile look more authentic and it means that more people are likely reach out to you!"
            android:layout_gravity="top"
            android:textSize="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:paddingTop="20dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/signupProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/signupPictureName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="Name"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You can always add or change your profile picture later in settings."
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:textSize="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/signupPictureGallery"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="14dp"
                android:text="@string/signupProfileGalleryText"
                android:background="#4C62DC"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/signupPictureCamera"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="14dp"
                android:text="@string/signupProfileCameraText"
                android:background="#4C62DC"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/signupPictureCancel"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:textSize="14dp"
            android:text="@string/signupProfileCancelText"
            android:background="@color/white"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>


    </LinearLayout>

</LinearLayout>